fix link text align

--- a/styles/style-kids.css
+++ b/styles/style-kids.css
@@ -609,6 +609,7 @@ body {
 
 
 .promotion_container>a {
+    text-align: center;
     display: block;
     font-size: 14px;
     font-family: 'Roboto-Light';
